--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <!-- Navbar -->
     <nav class="navbar navbar-dark bg-primary mb-4 shadow-sm">
-        <div class="container">
+        <div class="container-xxl">
             <a class="navbar-brand d-flex align-items-center gap-2" href="#">
                 <i class="bi bi-check2-circle fs-4"></i>
                 <span>To-Do</span>
@@ -26,9 +26,10 @@
         </div>
     </nav>
 
-    <main class="container">
+    <main class="container-xxl">
         <div class="row justify-content-center">
-            <div class="col-12 col-lg-8">
+            <!-- Card più larga: 11/12 su xl e 10/12 su xxl -->
+            <div class="col-12 col-xl-11 col-xxl-10">
                 <div class="card shadow-sm card-polish">
                     <div class="card-body">
                         <div class="d-flex flex-column mb-3">
@@ -39,8 +40,9 @@
                         <form id="taskForm" class="row g-3 align-items-end mb-3 needs-validation" novalidate>
                             <div class="col-12">
                                 <label for="taskInput" class="form-label">Titolo</label>
-                                <input id="taskInput" type="text" class="form-control" autocomplete="off" required>
-                                <div class="invalid-feedback">Inserisci un titolo decente.</div>
+                                <input id="taskInput" type="text" class="form-control" autocomplete="off"
+                                    placeholder="Inserisci un titolo" required>
+                                <div class="invalid-feedback">Inserisci un titolo</div>
                             </div>
 
                             <div class="col-12 col-md-6">
@@ -56,24 +58,70 @@
                                     di inizio.</div>
                             </div>
 
-                            <div class="col-12">
-                                <div class="d-flex flex-column flex-md-row align-items-stretch gap-2">
-                                    <button id="addBtn" type="submit" class="btn btn-primary">
-                                        <i class="bi bi-plus-lg me-1"></i> Aggiungi
-                                    </button>
+                            <!-- Toolbar: SEMPRE su una riga -->
+                            <div class="toolbar d-flex flex-nowrap align-items-stretch gap-2">
 
-                                    <!-- Spinge il filtro a destra da md in su -->
-                                    <div class="ms-md-auto"></div>
+                                <!-- Bottone Aggiungi -->
+                                <button id="addBtn" type="submit" class="btn btn-primary">
+                                    <i class="bi bi-plus-lg me-1"></i> Aggiungi
+                                </button>
 
-                                    <button id="filterBtn" type="button" class="btn btn-outline-secondary"
-                                        data-bs-toggle="tooltip" data-bs-title="Cambia filtro">
-                                        <i class="bi bi-funnel me-1"></i>
-                                        <span class="filter-label">Mostra: Tutte</span>
+                                <!-- Search compatta -->
+                                <input id="searchInput" type="search" class="form-control w-25 flex-grow-1"
+                                    placeholder="Cerca…" aria-label="Cerca nei titoli">
+
+                                <!-- Bottone Ordina -->
+                                <button id="sortBtn" type="button" class="btn btn-outline-secondary"
+                                    data-bs-toggle="tooltip" data-bs-title="Ordina per data: più recenti prima">
+                                    <i class="bi bi-sort-down me-1"></i>
+                                    <span class="sort-label">Ordina: Nuove → Vecchie</span>
+                                </button>
+
+                                <!-- Bottone Filtra -->
+                                <button id="filterBtn" type="button" class="btn btn-outline-secondary"
+                                    data-bs-toggle="tooltip" data-bs-title="Cambia filtro">
+                                    <i class="bi bi-funnel me-1"></i>
+                                    <span class="filter-label">Mostra: Tutte</span>
+                                </button>
+
+                                <!-- Dropdown Azioni -->
+                                <div class="dropdown">
+                                    <button class="btn btn-outline-secondary dropdown-toggle" type="button"
+                                        id="bulkMenuBtn" data-bs-toggle="dropdown" aria-expanded="false">
+                                        <i class="bi bi-lightning me-1"></i> Azioni
                                     </button>
+                                    <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="bulkMenuBtn">
+                                        <li><button class="dropdown-item" id="markAllBtn" type="button">
+                                                <i class="bi bi-check2-all me-1"></i> Segna tutte come completate
+                                            </button></li>
+                                        <li><button class="dropdown-item" id="removeCompletedBtn" type="button">
+                                                <i class="bi bi-trash3 me-1"></i> Rimuovi completate
+                                            </button></li>
+                                        <li>
+                                            <hr class="dropdown-divider">
+                                        </li>
+                                        <li><button class="dropdown-item text-danger" id="clearAllBtn" type="button">
+                                                <i class="bi bi-x-circle me-1"></i> Svuota tutto
+                                            </button></li>
+                                    </ul>
                                 </div>
-                            </div>
-                        </form>
 
+                                <!-- Switch Lista/Mappa -->
+                                <div class="btn-group" role="group" aria-label="Selettore modalità">
+                                    <input type="checkbox" class="btn-check" id="modeSwitch" autocomplete="off">
+                                    <label class="btn btn-outline-dark d-flex align-items-center gap-2"
+                                        for="modeSwitch">
+                                        <i class="bi bi-list-ul"></i>
+                                        <span class="mode-label">Lista</span>
+                                    </label>
+                                </div>
+
+                            </div>
+
+
+
+
+                        </form>
 
 
                         <!-- Empty state -->
@@ -96,7 +144,7 @@
 
     <!-- Bootstrap JS (bundle include Popper) -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="app.js"></script>
+    <script type="module" src="main.js"></script>
 </body>
 
 </html>
