--- a/index.html
+++ b/index.html
@@ -6,17 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>To-Do • Bootstrap</title>
 
-    <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <!-- Bootstrap Icons -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
 
-    <link rel="stylesheet" href="styles.css">
+    <!-- QUI il nome giusto -->
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-
-    <!-- Navbar -->
     <nav class="navbar navbar-dark bg-primary mb-4 shadow-sm">
         <div class="container-xxl">
             <a class="navbar-brand d-flex align-items-center gap-2" href="#">
@@ -28,15 +25,13 @@
 
     <main class="container-xxl">
         <div class="row justify-content-center">
-            <!-- Card più larga: 11/12 su xl e 10/12 su xxl -->
-            <div class="col-12 col-xl-11 col-xxl-10">
+            <div class="col-12">
                 <div class="card shadow-sm card-polish">
                     <div class="card-body">
                         <div class="d-flex flex-column mb-3">
                             <h1 class="h4 mb-1">Le tue attività</h1>
                         </div>
 
-                        <!-- Form -->
                         <form id="taskForm" class="row g-3 align-items-end mb-3 needs-validation" novalidate>
                             <div class="col-12">
                                 <label for="taskInput" class="form-label">Titolo</label>
@@ -58,55 +53,50 @@
                                     di inizio.</div>
                             </div>
 
-                            <!-- Toolbar: SEMPRE su una riga -->
-                            <div class="toolbar d-flex flex-nowrap align-items-stretch gap-2">
-
-                                <!-- Bottone Aggiungi -->
+                            <!-- Toolbar -->
+                            <div class="toolbar d-flex align-items-stretch gap-2">
                                 <button id="addBtn" type="submit" class="btn btn-primary">
                                     <i class="bi bi-plus-lg me-1"></i> Aggiungi
                                 </button>
 
-                                <!-- Search compatta -->
-                                <input id="searchInput" type="search" class="form-control w-25 flex-grow-1"
-                                    placeholder="Cerca…" aria-label="Cerca nei titoli">
+                                <input id="searchInput" type="search" class="form-control w-50 flex-grow-1"
+                                    style="max-width: 300px;" placeholder="Cerca…" aria-label="Cerca nei titoli">
 
-                                <!-- Bottone Ordina -->
+                                <button id="loadFakeBtn" type="button" class="btn btn-outline-warning">
+                                    <i class="bi bi-cloud-download me-1"></i> Carica demo
+                                </button>
+
                                 <button id="sortBtn" type="button" class="btn btn-outline-secondary"
                                     data-bs-toggle="tooltip" data-bs-title="Ordina per data: più recenti prima">
                                     <i class="bi bi-sort-down me-1"></i>
                                     <span class="sort-label">Ordina: Nuove → Vecchie</span>
                                 </button>
 
-                                <!-- Bottone Filtra -->
                                 <button id="filterBtn" type="button" class="btn btn-outline-secondary"
                                     data-bs-toggle="tooltip" data-bs-title="Cambia filtro">
                                     <i class="bi bi-funnel me-1"></i>
                                     <span class="filter-label">Mostra: Tutte</span>
                                 </button>
 
-                                <!-- Dropdown Azioni -->
                                 <div class="dropdown">
                                     <button class="btn btn-outline-secondary dropdown-toggle" type="button"
                                         id="bulkMenuBtn" data-bs-toggle="dropdown" aria-expanded="false">
                                         <i class="bi bi-lightning me-1"></i> Azioni
                                     </button>
                                     <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="bulkMenuBtn">
-                                        <li><button class="dropdown-item" id="markAllBtn" type="button">
-                                                <i class="bi bi-check2-all me-1"></i> Segna tutte come completate
-                                            </button></li>
-                                        <li><button class="dropdown-item" id="removeCompletedBtn" type="button">
-                                                <i class="bi bi-trash3 me-1"></i> Rimuovi completate
-                                            </button></li>
+                                        <li><button class="dropdown-item" id="markAllBtn" type="button"><i
+                                                    class="bi bi-check2-all me-1"></i> Segna tutte come
+                                                completate</button></li>
+                                        <li><button class="dropdown-item" id="removeCompletedBtn" type="button"><i
+                                                    class="bi bi-trash3 me-1"></i> Rimuovi completate</button></li>
                                         <li>
                                             <hr class="dropdown-divider">
                                         </li>
-                                        <li><button class="dropdown-item text-danger" id="clearAllBtn" type="button">
-                                                <i class="bi bi-x-circle me-1"></i> Svuota tutto
-                                            </button></li>
+                                        <li><button class="dropdown-item text-danger" id="clearAllBtn" type="button"><i
+                                                    class="bi bi-x-circle me-1"></i> Svuota tutto</button></li>
                                     </ul>
                                 </div>
 
-                                <!-- Switch Lista/Mappa -->
                                 <div class="btn-group" role="group" aria-label="Selettore modalità">
                                     <input type="checkbox" class="btn-check" id="modeSwitch" autocomplete="off">
                                     <label class="btn btn-outline-dark d-flex align-items-center gap-2"
@@ -115,22 +105,14 @@
                                         <span class="mode-label">Lista</span>
                                     </label>
                                 </div>
-
                             </div>
-
-
-
-
                         </form>
 
-
-                        <!-- Empty state -->
                         <div id="emptyState" class="empty-state text-center py-3">
                             <i class="bi bi-inbox fs-1 text-secondary"></i>
                             <p class="text-secondary mb-0">Nessun task. Goditi questo raro momento.</p>
                         </div>
 
-                        <!-- Lista -->
                         <ul id="taskList" class="list-group list-group-flush rounded-3 border"></ul>
                     </div>
 
@@ -142,7 +124,6 @@
         </div>
     </main>
 
-    <!-- Bootstrap JS (bundle include Popper) -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script type="module" src="main.js"></script>
 </body>
